--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,14 @@ img {
   color: var(--accent-color);
 }
 
+.contact-icon {
+  fill: currentColor;
+    margin-right: 10px;
+}
+.icon-svg {
+  width: 70px;
+  height: 70px;
+}
 /* ------------hero-------------- */
 
 .hero {
@@ -214,7 +222,15 @@ img {
   background-color: var(--white-text-color);
   color: var(--accent-color);
 }
-
+/* герой-підложка */
+.ovarlay{
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-color: var(--bgr-color);
+}
 /* блок Переваги */
 
 .section {
@@ -250,7 +266,17 @@ img {
   line-height: 1.71;
   color: var(--secondary-text-color);
 }
-
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  width: 270px;
+  background-color: #F5F4FA;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-repeat: no-repeat;
+}
 /* Чим займаємось */
 .section-work {
   text-align: center;
@@ -328,6 +354,70 @@ img {
   margin-top: 10px;
 }
 
+.social-link {
+  display: flex;
+  padding: 0;
+  border: none;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  color: #AFB1B8;
+  cursor: pointer;
+}
+
+.social-icon {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  fill: currentColor;
+  width: 20px;
+  height: 20px;
+}
+
+/* постійні клієнти */
+
+.client-list {
+  display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 30px;
+}
+
+.client-link {
+  display: flex;
+  padding: 0;
+  border: none;
+  width: 170px;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  color: #AFB1B8;
+  cursor: pointer;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+
+}
+
+.client-icon {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  fill: currentColor;
+  width: 106px;
+  height: 60px;
+
+}
+
+.client-link:hover,
+.client-link:focus {
+  color: #2196F3;
+  border: 1px solid #2196F3;
+}
 /* ----------------ПОДВАЛ----------------- */
 .footer {
   padding: 60px 0px;
@@ -391,6 +481,68 @@ color: var(--color-rgba);
 .primary-footer {
   color: var(--white-text-color);
 }
+
+  /* підвал-підвал))) */
+
+.footer-social {
+width: 206px;
+  height: 80px;
+  margin: 0;
+  padding: 0;
+  margin-left: 70px;
+  margin-top: 12px;
+
+}
+
+.footer-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+
+}
+
+.footer-links {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+
+}
+
+.footer-link {
+  display: flex;
+  padding: 0;
+  border: none;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+
+}
+
+.footer-icon {
+  margin: 0;
+  padding: 0;
+  border: none;
+  fill: #ffffff;
+  width: 20px;
+  height: 20px;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  background-color: #121213;
+}
+
+
+
 
 /* ---------------------------------------------- */
 /* --------------------ПОРТФОЛИО----------------- */
