--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --team-background-color: #f5f4fa;
   --color-borders: #eeeeee;
   --color-line: #ececec;
-  }
+}
 
 /*!Робимо reset за рекомендаціями   Андрія Данилко (не Сердючки!!!)*/
 h1,
@@ -43,11 +43,10 @@ body {
 
 .container {
   width: 1200px;
-  margin-left: auto;
   margin-right: auto;
-  margin-bottom: 0;
-  padding: 0px 15px;
-/*   outline: 2px solid red; */
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* прибираємо крапки списків */
@@ -97,13 +96,12 @@ img {
 .header-container {
   display: flex;
   align-items: center;
-  }
+}
 
 .header-nav {
   display: flex;
   align-items: center;
   /*! gap: 93px; error*/
-  
 }
 
 /* .item {
@@ -114,8 +112,8 @@ img {
   color: var(--black-logo);
 }
 .logo-color {
-  color: var(--color-logo)
-} 
+  color: var(--color-logo);
+}
 .header-list {
   display: flex;
   gap: 50px;
@@ -167,7 +165,7 @@ img {
 
 .contact-icon {
   fill: currentColor;
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .icon-svg {
   width: 70px;
@@ -177,14 +175,14 @@ img {
 
 .hero {
   margin: 0;
-  /* padding-top: 200px;
-  padding-bottom: 200px; */
-  text-align: center;
   background-color: var(--hero-background-color);
+  color: var(--white-text-color);
+  text-align: center;
 }
 .hero-container {
-  width: 696px;
-  padding: 0;
+  display: block;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -194,16 +192,15 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--white-text-color);
+  /* color: var(--white-text-color); */
   margin-bottom: 30px;
-  
 }
 
 .hero-button {
-    border-radius: 4px;
-    width: 216px;
+  border-radius: 4px;
+  width: 216px;
   padding: 10px;
-  border:none;
+  border: none;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -223,12 +220,16 @@ img {
   color: var(--accent-color);
 }
 /* герой-підложка */
-.ovarlay{
+.ovarlay {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_fon.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero_fon.jpg);
   background-color: var(--bgr-color);
 }
 /* блок Переваги */
@@ -250,7 +251,7 @@ img {
 .card-features {
   display: block;
   width: 270px;
-    }
+}
 
 .features-title {
   font-weight: 700;
@@ -272,7 +273,7 @@ img {
   align-items: center;
   height: 120px;
   width: 270px;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
   background-repeat: no-repeat;
@@ -280,12 +281,13 @@ img {
 /* Чим займаємось */
 .section-work {
   text-align: center;
-    padding-top: 0;
+  padding-top: 0;
 }
 .section-title-work {
   font-size: 36px;
-    line-height: 42px;
-    margin-bottom: 50px;
+  line-height: 42px;
+  margin-bottom: 50px;
+  text-align: center;
 }
 .work-list {
   display: flex;
@@ -306,7 +308,6 @@ img {
 .team-section {
   background-color: var(--team-background-color);
   text-align: center;
- 
 }
 .team-list {
   display: flex;
@@ -323,9 +324,9 @@ img {
   line-height: 1.19;
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-  0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  }
+}
 .team-card .title {
   font-weight: 500;
   font-size: 16px;
@@ -336,8 +337,7 @@ img {
   display: block;
   margin: 0;
   padding: 30px 0;
-  }
-
+}
 
 .name {
   font-weight: 500;
@@ -354,6 +354,13 @@ img {
   margin-top: 10px;
 }
 
+.social-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
 .social-link {
   display: flex;
   padding: 0;
@@ -363,12 +370,19 @@ img {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
-  color: #AFB1B8;
+  color: #afb1b8;
   cursor: pointer;
+  gap: 10px;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 .social-icon {
-  display: block;
+  /* display: block; */
   margin: 0;
   padding: 0;
   border: none;
@@ -381,10 +395,10 @@ img {
 
 .client-list {
   display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 30px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 30px;
 }
 
 .client-link {
@@ -395,11 +409,10 @@ img {
   height: 92px;
   justify-content: center;
   align-items: center;
-  color: #AFB1B8;
+  color: #afb1b8;
   cursor: pointer;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
-
 }
 
 .client-icon {
@@ -410,24 +423,23 @@ img {
   fill: currentColor;
   width: 106px;
   height: 60px;
-
 }
 
 .client-link:hover,
 .client-link:focus {
-  color: #2196F3;
-  border: 1px solid #2196F3;
+  color: #2196f3;
+  border: 1px solid #2196f3;
 }
 /* ----------------ПОДВАЛ----------------- */
 .footer {
   padding: 60px 0px;
   font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  font-style: normal;
   background-color: var(--hero-background-color);
-  color: var(--footer-text-color)
+  color: var(--footer-text-color);
 }
 .footer-adress-block {
   display: flex;
@@ -436,29 +448,29 @@ img {
 
 .logo-footer {
   display: inline-block;
-    text-decoration: none;
-    color: var(--white-text-color);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
+  text-decoration: none;
+  color: var(--white-text-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 
 .logo-white {
   color: var(--white-text-color);
 }
 .adress-footer {
-color: var(--color-rgba);
+  color: var(--color-rgba);
   font-style: normal;
   display: inline-block;
-    margin: 0;
-    text-decoration: none;
+  margin: 0;
+  text-decoration: none;
 }
 .footer-contact-list {
-  display: block;
-  
+  display: flex;
+  flex-direction: column;
 }
 .footer-contact-list .item:not(:last-child) {
   margin-bottom: 9px;
@@ -476,22 +488,27 @@ color: var(--color-rgba);
 .footer-contact-link:hover,
 .footer-contact-link:focus {
   color: var(--accent-color);
-  }
+}
 
 .primary-footer {
   color: var(--white-text-color);
 }
 
-  /* підвал-підвал))) */
+/* підвал-підвал))) */
+
+.container-footer {
+  display: flex;
+}
 
 .footer-social {
-width: 206px;
+  width: 206px;
   height: 80px;
   margin: 0;
   padding: 0;
   margin-left: 70px;
   margin-top: 12px;
-
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-text {
@@ -501,7 +518,6 @@ width: 206px;
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-
 }
 
 .footer-links {
@@ -510,7 +526,6 @@ width: 206px;
   margin: 0;
   padding: 0;
   gap: 10px;
-
 }
 
 .footer-link {
@@ -524,7 +539,6 @@ width: 206px;
   align-items: center;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.1);
-
 }
 
 .footer-icon {
@@ -538,16 +552,12 @@ width: 206px;
 
 .footer-link:hover,
 .footer-link:focus {
-  background-color: #121213;
+  background-color: #2196f3;
 }
-
-
-
 
 /* ---------------------------------------------- */
 /* --------------------ПОРТФОЛИО----------------- */
 /* ---------------------------------------------- */
-
 
 /* .portfolio-button-container {
  margin-top: 94px;
@@ -557,9 +567,9 @@ width: 206px;
   display: flex;
   justify-content: center;
   align-items: center;
-    gap: 8px;
-    margin-bottom: 50px;
-  }
+  gap: 8px;
+  margin-bottom: 50px;
+}
 
 .portfolio-button {
   font-family: "Roboto", sans-serif;
@@ -567,7 +577,7 @@ width: 206px;
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0.03em;
-  padding: 6px 22px;  
+  padding: 6px 22px;
   border: none;
   border-radius: 4px;
   background-color: var(--team-background-color);
@@ -580,9 +590,8 @@ width: 206px;
   background-color: var(--accent-color);
   color: var(--white-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
 
 .portfolio-list {
   display: flex;
@@ -591,7 +600,13 @@ width: 206px;
   width: calc ((100% - 240) /9);
 }
 
-portfolio-list> .list {
+.card-portfolio:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  
+}
+
+portfolio-list > .list {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
@@ -599,8 +614,8 @@ portfolio-list> .list {
 
 .portfolio-list-block {
   padding: 20px 24px;
-    border: 1px solid var(--color-borders);
-    border-top-width: 0;
+  border: 1px solid var(--color-borders);
+  border-top-width: 0;
 }
 
 .portfolio-list-title {
@@ -617,4 +632,3 @@ portfolio-list> .list {
   line-height: 1.87;
   color: var(--secondary-text-color);
 }
-
